@startuml Memento

title Memento Pattern — Multi-Stage Upload Recovery

skinparam classAttributeIconSize 0
skinparam classFontStyle bold

' ── Memento ───────────────────────────────────────────────────
class UploadSessionMemento <<record>> {
  + SessionId : string
  + TelegramId : long
  + ChatId : long
  + FileId : string
  + FileName : string
  + LocalFilePath : string?
  + Status : UploadStatus
  + CreatedAt : DateTime
}

enum UploadStatus {
  Started
  Downloaded
  Validated
  Completed
  Failed
}

' ── Originator ────────────────────────────────────────────────
class SingleAudioUploadCommand {
  + ResumeSessionAsync(memento : UploadSessionMemento) : Task
}

' ── Caretaker ─────────────────────────────────────────────────
interface IUploadSessionCaretaker <<interface>> {
  + SaveMementoAsync(memento : UploadSessionMemento) : Task
  + GetPendingSessionsAsync() : Task<IEnumerable<UploadSessionMemento>>
  + RemoveMementoAsync(sessionId : string) : Task
}

class SqliteUploadSessionCaretaker {
  + SaveMementoAsync(...) : Task
  + GetPendingSessionsAsync(...) : Task
}

' ── Caretakers & Consumers ────────────────────────────────────
class UploadSessionQueue {
  - _caretaker : IUploadSessionCaretaker
  + EnqueueAsync(...) : Task
}

class UploadProcessorService {
  - _uploadCommand : SingleAudioUploadCommand
  # ExecuteAsync(...) : Task
}

' Relationships
UploadSessionMemento +-- UploadStatus

' Originator creates and consumes Mementos
SingleAudioUploadCommand ..> UploadSessionMemento : «restores state from»
UploadSessionQueue ..> UploadSessionMemento : «captures state into»

' Caretaker manages Mementos
SqliteUploadSessionCaretaker ..|> IUploadSessionCaretaker
IUploadSessionCaretaker --> "0..*" UploadSessionMemento : manages

' Clients using the Caretaker
UploadSessionQueue --> IUploadSessionCaretaker : "persists new state"
SingleAudioUploadCommand --> IUploadSessionCaretaker : "updates/removes state"

note right of SingleAudioUploadCommand
  **Originator**
  Restores its execution 
  context from a Memento 
  to resume an upload.
end note

note bottom of UploadSessionQueue
  **Caretaker (Producer)**
  Captures the initial 
  message state into a 
  Memento and persists it.
end note

footer Memento · GoF Behavioral · NurFlac

@enduml
